# surfsample

./: MANIFEST.in  README.md  pyproject.toml
surfsample/: pipeline_description.json  run.py
surfsample/config/: snakebids.yml
surfsample/workflow/: Snakefile
