[project]
name = "surfsample"
version = "0.1.0"
description = ""
readme = "README.md"

authors = [
    { name = "Peter Van Dyken", email = "pvandyk2@uwo.ca" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

requires-python = ">=3.8,<3.12"
dependencies = [
    "snakemake >= 7.20",
    "snakebids >= 0.10.0",
    "numpy <=1.24.4; python_version < \"3.9\"",
]

[project.scripts]
surfsample = "surfsample.run:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
